# PyWeb

./: PyWeb.py  README.md  Test.py  pyproject.toml  test.py
Example Project/: Example.py  index.html
pyweb/: css.py  pyweb.py
pyweb/css/: __init__.py  animation.py  backdropfilter.py  border.py  color.py  gradient.py  position.py  style.py  style_value.py  unit.py
pyweb/new_css/: unit.py
scripts/: lint.sh
tests/: test_css.py
