[tool.poetry]
name = "pyweb"
version = "0.1.0"
description = "A Python library for easily creating SIMPLE websites"
authors = ["Dmunch04 <daniellmunch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
